# ros2_biped_minimal

./: .gitignore  README.md
src/my_robot_bringup/: package.xml  setup.py
src/my_robot_bringup/launch/: biped_bringup.launch.py
src/my_robot_bringup/scripts/: pid_right_hip.py
src/my_robot_control/: package.xml  setup.py
src/my_robot_control/my_robot_control/: swing_demo.py
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/backup/: minimal_biped.urdf  ros2_control.yaml
src/my_robot_description/config/: ros2_control.yaml  rsp_params.yaml
src/my_robot_description/config/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/my_robot_description/config/log/: latest_build
src/my_robot_description/config/s1_step_test/: metadata.yaml  s1_step_test_0.db3
src/my_robot_description/urdf/: minimal_biped.nocomment.urdf  minimal_biped.noctrl.urdf  minimal_biped.urdf  minimal_biped.urdf.bak.20251005_0019  minimal_biped.urdf.bak.20251025_1639  minimal_biped.with_comment.bak  minimal_robot.sdf  minimal_robot.urdf
src/my_robot_description/urdf/install/: local_setup.sh  setup.sh
src/my_robot_description/urdf/log/: latest_build
